name:                lazy-io-streams
version:             0.1.0.0
synopsis:            Get lazy with your io-streams
license:             BSD3
license-file:        LICENSE
author:              Luke Clifton
maintainer:          ltclifton@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     System.IO.Streams.Lazy
  build-depends:       base >=4.9 && <4.10
                     , bytestring
                     , io-streams
  hs-source-dirs:      src
  default-language:    Haskell2010
